Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38949

[PATCH] QToolButton::setMenu does not invalidate cached size hint

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.0
    • 4.8.6, 5.3.1
    • None
    • Linux (using KDE Oxygen style).
    • bb3d2ca9f18071537888622310ca0cb7f587e61d

      The proper size of a QToolButton may (e.g. in 'icon only' mode) depend on whether or not the button has an associated QMenu. However, adding a QMenu does not invalidate the cached size hint, which causes the button to be less wide than it should be.

        For Gerrit Dashboard: QTBUG-38949
        # Subject Branch Project Status CR V

            peppe Giuseppe D'Angelo
            matthew.woehlke Matthew Woehlke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes